deployment/monitoring/prometheus/prometheus-virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: prometheus
  namespace: monitoring
spec:
  gateways:
  - istio-system/istio-ingressgateway
  - kubeflow/kubeflow-gateway
  hosts:
  - '*'
  http:
  - match:
    - uri:
        prefix: /prometheus/
    rewrite:
      uri: /
    route:
    - destination:
        host: prometheus-service.monitoring.svc.cluster.local
        port:
          number: 8080
      headers:
        response:
          set:
            X-Frame-Options: "SAMEORIGIN"   
            Access-Control-Allow-Origin: "https://vm1039.kaj.pouta.csc.fi"
            Access-Control-Allow-Credentials: "true"
    headers:
      request:
        set:
          X-Forwarded-Prefix: "/prometheus/"
    corsPolicy:
      allowOrigins:
        - exact: "https://vm1039.kaj.pouta.csc.fi"
      allowMethods:
        - GET
        - POST
        - OPTIONS
      allowCredentials: true
